--- a/styles.css
+++ b/styles.css
@@ -140,3 +140,8 @@ hr{
 .footer ul{
     padding-inline-start: 0px ;
 }
+/* Responsiveness*/
+.responsive{
+    max-width: 100%;
+    height: auto;
+}
