--- a/stylesd.css
+++ b/stylesd.css
@@ -62,6 +62,10 @@ hr{
 
 /* navigation */
 
+.theme-selector{
+    text-align: right;
+}
+
 .navigation{
     background-color: var(--pri-col);
     color: white;
@@ -72,11 +76,10 @@ hr{
 .navigation .nav-name{
     font-weight: bold;
     font-size: 112.5%;
-    text-align: right;
 }
 
 .navigation .nav-pills{
-    text-align: left;
+    text-align: right;
 }
 
 .navigation .link{
@@ -98,9 +101,10 @@ hr{
 }
 
 .hero .hero-img{
-    max-width: 350 px;
+    max-width: 350px;
     display: block;
     margin: auto;
+    border-radius: 250px;
 }
 
 .hero .hero-heading{
